--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.23)
 set(CMAKE_CXX_STANDARD 20)
 add_compile_definitions(WIN32_LEAN_AND_MEAN )
-add_link_options(-pthread -lpthread)
+add_link_options(-pthread)
 
 project(server)
 add_executable(server src/main.cpp)
