added some classes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(srv)
 add_subdirectory(lib/sha256)
 add_subdirectory(lib/sqlite)
-
+add_subdirectory(lib/nnl)
 target_sources(server PRIVATE main.cpp)
