--- a/src/srv/CMakeLists.txt
+++ b/src/srv/CMakeLists.txt
@@ -1,2 +1,4 @@
 target_sources(server PRIVATE server.cpp PacketFactory.cpp)
 add_subdirectory(packets)
+add_subdirectory(network)
+add_subdirectory(ClientHandle)
