--- a/src/srv/CMakeLists.txt
+++ b/src/srv/CMakeLists.txt
@@ -2,3 +2,4 @@ target_sources(server PRIVATE server.cpp PacketFactory.cpp)
 add_subdirectory(packets)
 add_subdirectory(network)
 add_subdirectory(ClientHandle)
+add_subdirectory(observers)
