--- a/src/srv/observers/CMakeLists.txt
+++ b/src/srv/observers/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(server PRIVATE OnUserConnected.cpp OnServerStartup.cpp OnUserDisconnected.cpp)
+target_sources(server PRIVATE OnUserConnected.cpp OnServerStartup.cpp OnUserDisconnected.cpp OnUserAuth.cpp)
