--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,11 @@ else()
     set(VCPKG_TARGET_TRIPLET x64-windows-static)
 endif()
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
+
+
 set(CMAKE_CXX_STANDARD 23)
 
 add_compile_definitions(WIN32_LEAN_AND_MEAN )
