--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,6 @@ target_link_libraries(server PRIVATE fmt::fmt-header-only)
 
 find_package(ZLIB REQUIRED)
 target_link_libraries(server PRIVATE ZLIB::ZLIB)
+
+find_package(Boost REQUIRED)
+target_link_libraries(server PRIVATE ${Boost_LIBRARIES} )
