--- a/src/srv/CMakeLists.txt
+++ b/src/srv/CMakeLists.txt
@@ -1,5 +1,6 @@
-target_sources(server PRIVATE server.cpp PacketFactory.cpp)
+target_sources(server PRIVATE server.cpp PacketFactory.cpp )
 add_subdirectory(packets)
 add_subdirectory(network)
 add_subdirectory(ClientHandle)
 add_subdirectory(observers)
+add_subdirectory(decorators)
