--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -1,1 +1,11 @@
-target_sources(server PRIVATE BasePacket.cpp SetUserName.cpp Auth.cpp OnlineUsersICount.cpp GetUserInfo.cpp SetUserStatus.cpp UpdateUserConfig.cpp GetUserConfigs.cpp SendChatMessage.cpp)
+target_sources(server PRIVATE
+        BasePacket.cpp
+        SetUserName.cpp
+        Auth.cpp
+        OnlineUsersICount.cpp
+        GetUserInfo.cpp
+        SetUserStatus.cpp
+        UpdateUserConfig.cpp
+        GetUserConfigs.cpp
+        SendChatMessage.cpp
+        )
