--- a/src/srv/decorators/CMakeLists.txt
+++ b/src/srv/decorators/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(server PRIVATE BaseDecorator.cpp RegisteredOnly.cpp)
+target_sources(server PRIVATE BaseDecorator.cpp RegisteredOnly.cpp exceptions.h)
