added base64 lib

--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -8,4 +8,5 @@ target_sources(server PRIVATE
         UpdateUserConfig.cpp
         GetUserConfigs.cpp
         SendChatMessage.cpp
+        CreateChat.cpp
         )
