changed config table name, added packet to get list of chats

--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -10,4 +10,5 @@ target_sources(server PRIVATE
         SendChatMessage.cpp
         CreateChat.cpp
         DeleteChat.cpp
+        GetChatList.cpp
         )
