--- a/src/srv/CMakeLists.txt
+++ b/src/srv/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(network)
 add_subdirectory(ClientHandle)
 add_subdirectory(observers)
 add_subdirectory(decorators)
+add_subdirectory(DataBaseAPI)
