added new packet to download files

--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -11,4 +11,5 @@ target_sources(server PRIVATE
         CreateChat.cpp
         DeleteChat.cpp
         GetChatList.cpp
+        DownloadFile.cpp
         )
