--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,4 @@
 add_subdirectory(srv)
-add_subdirectory(lib/sha256)
-add_subdirectory(lib/sqlite)
-add_subdirectory(lib/base64)
-add_subdirectory(lib/crypto)
+add_subdirectory(lib)
 
 target_sources(server PRIVATE main.cpp)
