--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.20)
 
 set(CMAKE_CXX_STANDARD 23)
-
 set(CMAKE_CXX_COMPILER clang++)
-set(CMAKE_C_COMPILER clang)
+set(CMAKE_C_COMPILER   clang)
 
-add_link_options(-pthread)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}${CMAKE_CURRENT_SOURCE_DIR}/cmake-scripts)
 
-
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
 
 if (CMAKE_BUILD_TYPE MATCHES Debug)
     add_compile_definitions(_DEBUG)
@@ -15,12 +16,6 @@ else()
     add_link_options(-s)
 endif()
 
-
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../out/${CMAKE_BUILD_TYPE}")
-set(nlohmann_json "lib/json")
 
 project(server)
 add_executable(server src/main.cpp)
@@ -40,6 +35,11 @@ target_link_libraries( server PRIVATE nlohmann_json )
 
 find_package(fmt CONFIG REQUIRED)
 target_link_libraries(server PRIVATE fmt::fmt)
+
+
+find_package(Crypto++ REQUIRED)
+target_link_libraries(server PRIVATE cryptopp)
+
 
 if (WIN32)
     target_link_libraries(server PRIVATE ws2_32)
