--- a/src/srv/CMakeLists.txt
+++ b/src/srv/CMakeLists.txt
@@ -1,7 +1,8 @@
-target_sources(server PRIVATE server.cpp factories/PacketFactory.cpp)
 add_subdirectory(packets)
 add_subdirectory(network)
 add_subdirectory(ClientHandle)
 add_subdirectory(observers)
-add_subdirectory(decorators)
 add_subdirectory(DataBaseAPI)
+add_subdirectory(factories)
+
+target_sources(server PRIVATE server.cpp)
