--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -1,15 +1,6 @@
-target_sources(server PRIVATE
-        BasePacket.cpp
-        SetUserName.cpp
-        Auth.cpp
-        OnlineUsersICount.cpp
-        GetUserInfo.cpp
-        SetUserStatus.cpp
-        UpdateUserConfig.cpp
-        GetUserConfigs.cpp
-        SendChatMessage.cpp
-        CreateChat.cpp
-        DeleteChat.cpp
-        GetChatList.cpp
-        DownloadFile.cpp
-        )
+target_sources(server PRIVATE BasePacket.cpp)
+
+
+add_subdirectory(decorators)
+add_subdirectory(Misc)
+add_subdirectory(UserRelated)
