added based packet "UserRelated" for all packets that work with user state

--- a/src/srv/packets/UserRelated/CMakeLists.txt
+++ b/src/srv/packets/UserRelated/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(server PRIVATE GetName.cpp GetStatus.cpp GetChatList.cpp SetName.cpp)
+target_sources(server PRIVATE GetName.cpp GetStatus.cpp GetChatList.cpp SetName.cpp UserRelated.cpp)
