--- a/src/srv/packets/decorators/CMakeLists.txt
+++ b/src/srv/packets/decorators/CMakeLists.txt
@@ -1,1 +1,6 @@
-target_sources(server PRIVATE BaseDecorator.cpp RegisteredOnly.cpp exceptions.h CantModifyOtherUsers.cpp)
+target_sources(server PRIVATE
+        BaseDecorator.cpp
+        RegisteredOnly.cpp
+        exceptions.h
+        CantModifyOtherUsers.cpp
+        AdminOnly.cpp)
