added new packet type for chats

--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -4,3 +4,4 @@ target_sources(server PRIVATE BasePacket.cpp)
 add_subdirectory(decorators)
 add_subdirectory(Misc)
 add_subdirectory(UserRelated)
+add_subdirectory(ChatRelated)
