--- a/src/srv/packets/ChatRelated/CMakeLists.txt
+++ b/src/srv/packets/ChatRelated/CMakeLists.txt
@@ -1,1 +1,4 @@
-target_sources(server PRIVATE ChatRelated.cpp GetName.cpp)
+target_sources(server PRIVATE
+        ChatRelated.cpp
+        GetName.cpp
+        SendMessage.cpp)
