improved api stuff

--- a/src/srv/packets/UserRelated/CMakeLists.txt
+++ b/src/srv/packets/UserRelated/CMakeLists.txt
@@ -1,1 +1,7 @@
-target_sources(server PRIVATE GetName.cpp GetStatus.cpp GetChatList.cpp SetName.cpp UserRelated.cpp)
+target_sources(server PRIVATE
+        GetName.cpp
+        GetStatus.cpp
+        GetChatList.cpp
+        SetName.cpp
+        UserRelated.cpp
+        SetStatus.cpp)
