--- a/src/srv/DataBaseAPI/CMakeLists.txt
+++ b/src/srv/DataBaseAPI/CMakeLists.txt
@@ -1,1 +1,6 @@
-target_sources(server PRIVATE DataBase.cpp User.cpp Chat.cpp Config.cpp)
+target_sources(server PRIVATE
+        DataBase.cpp
+        User.cpp
+        Chat.cpp
+        Config.cpp
+        ChatMessage.cpp)
