--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(decorators)
 add_subdirectory(Misc)
 add_subdirectory(UserRelated)
 add_subdirectory(ChatRelated)
+add_subdirectory(ChatMessageRelated)
