--- a/src/srv/packets/ChatRelated/CMakeLists.txt
+++ b/src/srv/packets/ChatRelated/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(server PRIVATE
         ChatRelated.cpp
         GetName.cpp
         SendMessage.cpp
-        GetInvite.cpp)
+        GetInvite.cpp
+        GetHistory.cpp)
