changed some stuff

--- a/src/srv/packets/UserRelated/CMakeLists.txt
+++ b/src/srv/packets/UserRelated/CMakeLists.txt
@@ -4,4 +4,6 @@ target_sources(server PRIVATE
         GetChatList.cpp
         SetName.cpp
         UserRelated.cpp
-        SetStatus.cpp)
+        SetStatus.cpp
+        GetConfigs.cpp
+        )
