--- a/src/srv/packets/decorators/CMakeLists.txt
+++ b/src/srv/packets/decorators/CMakeLists.txt
@@ -2,6 +2,6 @@ target_sources(server PRIVATE
         BaseDecorator.cpp
         RegisteredOnly.cpp
         exceptions.h
-        CantModifyOtherUsers.cpp
+        OwnerOnly.cpp
         AdminOnly.cpp
         ChatMembersOnly.cpp)
