fixed critical bug in IsValid for user db class

--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(Misc)
 add_subdirectory(UserRelated)
 add_subdirectory(ChatRelated)
 add_subdirectory(ChatMessageRelated)
+add_subdirectory(ConfigRelated)
