added new packet

--- a/src/srv/packets/UserRelated/CMakeLists.txt
+++ b/src/srv/packets/UserRelated/CMakeLists.txt
@@ -6,4 +6,5 @@ target_sources(server PRIVATE
         UserRelated.cpp
         SetStatus.cpp
         GetConfigs.cpp
+        GetSubscriptions.cpp
         )
