--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(UserRelated)
 add_subdirectory(ChatRelated)
 add_subdirectory(ChatMessageRelated)
 add_subdirectory(ConfigRelated)
+add_subdirectory(Subscription)
