--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(ChatRelated)
 add_subdirectory(ChatMessageRelated)
 add_subdirectory(ConfigRelated)
 add_subdirectory(Subscription)
+add_subdirectory(ProductRelated)
