--- a/src/srv/packets/CMakeLists.txt
+++ b/src/srv/packets/CMakeLists.txt
@@ -3,9 +3,9 @@ target_sources(server PRIVATE BasePacket.cpp)
 
 add_subdirectory(decorators)
 add_subdirectory(Misc)
-add_subdirectory(UserRelated)
-add_subdirectory(ChatRelated)
+add_subdirectory(User)
+add_subdirectory(chat)
 add_subdirectory(ChatMessageRelated)
-add_subdirectory(ConfigRelated)
+add_subdirectory(config)
 add_subdirectory(Subscription)
 add_subdirectory(ProductRelated)
