improved config file

--- a/src/srv/CMakeLists.txt
+++ b/src/srv/CMakeLists.txt
@@ -4,5 +4,5 @@ add_subdirectory(ClientHandle)
 add_subdirectory(observers)
 add_subdirectory(DataBaseAPI)
 add_subdirectory(factories)
-
+add_subdirectory(utils)
 target_sources(server PRIVATE server.cpp)
