--- a/src/srv/packets/Subscription/CMakeLists.txt
+++ b/src/srv/packets/Subscription/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(server PRIVATE
         SubscriptionRelated.cpp
         GetExpireDate.cpp
         CheckExpiration.cpp
+        GetProduct.cpp
         )
